--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.26.1",
+    "dotenv": "^16.0.0",
+    "express-json": "^1.0.0",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
